# 62_delete_directories

./: CMakeLists.txt
lib/: file_operator.cpp  file_operator.hpp
src/: delete_directories.cpp
